Removes turtle card center-align title, and fixes clone to tab1 only.

--- a/project-1/assets/css/styles.css
+++ b/project-1/assets/css/styles.css
@@ -58,7 +58,7 @@ main {
   margin-top: 60px;
 }
 
-#steps div {;
+#steps div {
   margin-bottom: 20px;
   padding: 0 80px;
 }
